--- a/src/android/res/layout/edit_entity.xml
+++ b/src/android/res/layout/edit_entity.xml
@@ -1,231 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/edit_entity_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#FFFFFF"
-    android:paddingBottom="8sp"
->
-    <TextView
-        android:id="@+id/edit_entity_title"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textSize="36sp"
-        android:typeface="sans"
-        android:gravity="center_horizontal"
-        android:text="Edit Creature or Effect"
-        android:textColor="#111111" />
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="8sp"
-    >
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-        >
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-            >
-                <Button
-                    android:id="@+id/button_damage_heal"
-                    android:text="@string/damage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
-                <Button
-                    android:id="@+id/button_subdue_unsubdue"
-                    android:text="@string/subdue_unsubdue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
+	android:id="@+id/edit_entity_view"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:background="#FFFFFF"
+	android:paddingBottom="8sp">
+	<TextView
+		android:id="@+id/edit_entity_title"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:textSize="36sp"
+		android:typeface="sans"
+		android:gravity="center_horizontal"
+		android:text="Edit Creature or Effect"
+		android:textColor="#111111" />
+	<ScrollView
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:padding="8sp">
+		<LinearLayout
+			xmlns:android="http://schemas.android.com/apk/res/android"
+			android:orientation="vertical"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:paddingRight="8sp">
+			<LinearLayout
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content">
+				<Button
+					android:id="@+id/button_damage_heal"
+					android:text="@string/damage"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="0"
+					android:gravity="right"
+					android:textColor="#111111" />
+				<Button
+					android:id="@+id/button_subdue_unsubdue"
+					android:text="@string/subdue_unsubdue"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="0"
+					android:gravity="right"
+					android:textColor="#111111" />
 
-            </LinearLayout>
-            <TableLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:stretchColumns="1"
-            >
-                <TableRow>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/name"
-                        android:textSize="18sp"
-                        android:textColor="#111111" />
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/name_edit"
-                        android:layout_weight="1" />
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/init_roll"
-                        android:textSize="18sp"
-                        android:textColor="#111111" />
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                    >
-                        <EditText
-                            android:hint="@string/init_dice_hint"                       
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/init_dice_edit"
-                            android:layout_weight="1" />
-                        <EditText
-                            android:hint="@string/init_roll_hint"                       
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/init_roll_edit"
-                            android:layout_weight="1" />
-                    </LinearLayout>
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/hit_points"
-                        android:textSize="18sp"
-                        android:textColor="#111111" />
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                    >
-                        <EditText
-                            android:hint="dice"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/hitdice_edit"
-                            android:layout_weight="1" />
-                        <EditText
-                            android:hint="points"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/hp_edit"
-                            android:layout_weight="1" />
-                    </LinearLayout>
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/abbrev"
-                        android:textSize="18sp"
-                        android:textColor="#111111" />
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/abbrev_edit"
-                        android:layout_weight="1" />
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/subdual"
-                        android:textSize="18sp"
-                        android:textColor="#111111" />
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/subdual_edit"
-                        android:layout_weight="1" />
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/rounds"
-                        android:textSize="18sp"
-                        android:textColor="#111111" />
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/rounds_edit"
-                        android:layout_weight="1" />
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/type"
-                        android:textSize="18sp"
-                        android:textColor="#111111" />
-                    <Spinner
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/type_edit" />
-                </TableRow>
-            </TableLayout>
-            <TextView
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:paddingTop="12sp"
-                android:textColor="#111111" />
-            <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-            >
-                <Button
-                    android:id="@+id/button_remove"
-                    android:text="@string/remove_item"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
-                <Button
-                    android:id="@+id/button_save"
-                    android:text="@string/save_item"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
-                <TextView
-                    android:text=""
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="#111111" />
-                <Button
-                    android:id="@+id/cancel"
-                    android:text="@string/cancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
-                <Button
-                    android:id="@+id/done"
-                    android:text="@string/ok"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+			</LinearLayout>
+			<TableLayout
+				xmlns:android="http://schemas.android.com/apk/res/android"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:stretchColumns="1">
+				<TableRow>
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text=""
+						android:textSize="18sp"
+						android:textColor="#111111" />
+					<EditText
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:hint="name"
+						android:id="@+id/name_edit"
+						android:layout_weight="1" />
+					<EditText
+						android:hint="abbrev"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:id="@+id/abbrev_edit"
+						android:layout_weight="1" />
+
+				</TableRow>
+				<TableRow>
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="init "
+						android:textSize="18sp"
+						android:textColor="#111111" />
+					<EditText
+						android:hint="init modifier"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:id="@+id/init_dice_edit"
+						android:layout_weight="1" />
+					<EditText
+						android:hint="init roll"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:id="@+id/init_roll_edit"
+						android:layout_weight="1" />
+				</TableRow>
+				<TableRow>
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="hp "
+						android:textSize="18sp"
+						android:textColor="#111111" />
+					<EditText
+						android:hint="hit dice"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:id="@+id/hitdice_edit"
+						android:layout_weight="1" />
+					<EditText
+						android:hint="hit points"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:id="@+id/hp_edit"
+						android:layout_weight="1" />
+				</TableRow>
+				<TableRow>
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="sub"
+						android:textSize="18sp"
+						android:textColor="#111111" />
+					<EditText
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:hint="subdual damage"
+						android:id="@+id/subdual_edit"
+						android:layout_weight="1" />
+				</TableRow>
+				<TableRow>
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="rnds"
+						android:textSize="18sp"
+						android:textColor="#111111" />
+					<EditText
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:hint="rounds left"
+						android:id="@+id/rounds_edit"
+						android:layout_weight="1" />
+				</TableRow>
+				<TableRow>
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="type "
+						android:textSize="18sp"
+						android:textColor="#111111" />
+					<Spinner
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:id="@+id/type_edit" />
+				</TableRow>
+			</TableLayout>
+			<TextView
+				android:text=""
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				android:paddingTop="12sp"
+				android:textColor="#111111" />
+			<LinearLayout
+				xmlns:android="http://schemas.android.com/apk/res/android"
+				android:orientation="horizontal"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content">
+				<Button
+					android:id="@+id/button_remove"
+					android:text="@string/remove_item"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="0"
+					android:gravity="right"
+					android:textColor="#111111" />
+				<Button
+					android:id="@+id/button_save"
+					android:text="@string/save_item"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="0"
+					android:gravity="right"
+					android:textColor="#111111" />
+				<TextView
+					android:text=""
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="1"
+					android:textColor="#111111" />
+				<Button
+					android:id="@+id/cancel"
+					android:text="@string/cancel"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="0"
+					android:gravity="right"
+					android:textColor="#111111" />
+				<Button
+					android:id="@+id/done"
+					android:text="@string/ok"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="0"
+					android:gravity="right"
+					android:textColor="#111111" />
+			</LinearLayout>
+		</LinearLayout>
+	</ScrollView>
 </LinearLayout>
